<resources>
    <string name="thumb_small_size">100x100</string>
    <string name="thumb_medium_size">200x200</string>
    <string name="thumb_large_size">480x480</string>
    <string name="small_size">200x200</string>
    <string name="medium_size">600x600</string>
    <string name="large_size">1024x1024</string>
    <string name="original_size">original</string>
    <string name="co_loi_xay_ra_vui_long_thu_lai">Có lỗi xảy ra. Vui lòng thử lại.</string>
    <string name="khong_co_ket_noi_mang_vui_long_kiem_tra_va_thu_lai">Kết nối mạng của bạn có vấn đề. Vui lòng thử lại.</string>
    <string name="chuc_mung_ban">Chúc mừng bạn</string>
    <string name="cam_on_ban_da_tham_gia_su_kien">Cảm ơn bạn đã tham gia sự kiện</string>
    <string name="nha_tai_tro">Nhà tài trợ</string>
    <string name="khong_the_thuc_hien_tac_vu_vi_ban_chua_cap_quyen">Không thể thực hiện tác vụ vì bạn chưa cấp quyền!</string>
    <string name="nhap_ma_de_them_luot_quay">Nhập mã để thêm lượt quay</string>
    <string name="quet_ma_de_them_luot_quay">Quét mã để thêm lượt quay</string>
    <string name="tiep_tuc_nhap_ma_du_thuong_de_ghi_danh_len_bang_vang_xep_hang_nao">Tiếp tục nhập mã dự thưởng để \n ghi danh lên bảng vàng xếp hạng nào!</string>
    <string name="tiep_tuc_quet_qr_code_du_thuong_de_ghi_danh_len_bang_vang_xep_hang_nao">Tiếp tục quét QR code dự thưởng để \n ghi danh lên bảng vàng xếp hạng nào!</string>
    <string name="dang_cap_nhat">Đang cập nhật</string>
    <string name="cap_nhat_moi_nhat">Cập nhật mới nhất</string>
    <string name="tuy_chon">Tùy chọn</string>
    <string name="so_dien_thoai_khong_duoc_de_trong">Số điện thoại không được để trống</string>
    <string name="so_dien_thoai_co_chua_ky_tu_dac_biet">Số điện thoại có chứa ký tự đăc biệt</string>
    <string name="so_dien_thoai_khong_dung_dinh_dang">Số điện thoại không đúng định dạng</string>
    <string name="nhap_ma_vao_day_i"><i>Nhập mã vào đây</i></string>
    <string name="nhap_ma_vao_day">Nhập mã vào đây</string>
    <string name="tutorial_loyalty"><![CDATA[<b>Bước 1: </b>Bạn vui lòng đến địa chỉ cửa hàng ghi trong thông tin quà. Hãy đảm bảo số điểm tích lũy của bạn bằng hoặc lớn hơn điểm đổi của món quà nhé. <br /><br /> <b>Bước 2: </b>Đến cửa hàng và đọc số điện thoại của bạn cho nhân viên. <br /><br /> <b>Bước 3: </b>Nhân viên cửa hàng sẽ xử lý trao quà cho bạn.]]></string>
    <string name="con_lai">Còn lại:</string>
    <string name="han_doi_qua">Hạn đổi quà</string>
    <string name="loai_qua">Loại quà</string>
    <string name="thong_tin_qua">Thông tin quà</string>
    <string name="thong_tin">Thông tin</string>
    <string name="phi_van_chuyen">Phí vận chuyển</string>
    <string name="nguoi_nhan_tu_thanh_toan_phi_van_chuyen_qua">Người nhận tự thanh toán phí vận chuyển quà.</string>
    <string name="duoc_cung_cap_boi">Được cung cấp bởi</string>
    <string name="doi_qua_nao">Đổi quà nào!</string>
    <string name="tat_ca">Tất cả</string>
    <string name="tich_diem">Tích điểm</string>
    <string name="tieu_diem">Tiêu điểm</string>
    <string name="khong_tim_thay_ket_qua_phu_hop">Không tìm thấy kết quả phù hợp</string>
    <string name="chon_tinh_thanh_pho">Chọn Tỉnh/Thành phố</string>
    <string name="chon_quan_huyen">Chọn Quận/Huyện</string>
    <string name="chon_phuong_xa">Chọn Phường/Xã</string>
    <string name="ok">Ok</string>
    <string name="noi_dung_ma_qr">Nội dung mã Qr</string>
    <string name="nhap_ma_du_thuong">Nhập mã dự thưởng</string>
    <string name="check_ma">Check mã</string>
    <string name="thong_tin_chuong_trinh">Thông tin chương trình</string>
    <string name="ma_du_thuong_chuong_trinh">Mã dự thưởng chương trình:</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
    <string name="ma_du_thuong_khong_duoc_de_trong_vui_long_kiem_tra_lai">Mã dự thưởng không được để trống\nVui lòng kiểm tra lại</string>
    <string name="doi_diem_tich_luy_de_nhan_nhung_phan_qua_cuc_cool_nhe">Đổi điểm tích lũy để nhận\nnhững phần quà cực cool nhé!</string>
    <string name="nhap_ma_cong_diem">Nhập mã cộng điểm</string>
    <string name="nhap_ma_duoc_dan_tren_bao_bi_san_pham_de_nhan_diem_tich_luy_doi_qua_nhe">Nhập mã được dán trên bao bì\nsản phẩm để nhận điểm tích lũy đổi quà nhé!</string>
    <string name="nhap_ma_ngay">Nhập mã ngay</string>
    <string name="nhap_ma_duoc_dan_tren_dan_pham_de_nhan_diem_tich_luy_doi_qua">Nhập mã được dán trên sản phẩm\nđể nhận điểm tích lũy đổi quà!</string>
    <string name="vui_long_nhap_ma_code">Vui lòng nhập mã code</string>
    <string name="quet_tem_cong_diem">Quét tem cộng điểm</string>
    <string name="quet_tem_qrcode_duoc_dan_tren_bao_bi_san_pham_de_nhan_diem_tich_luy_doi_qua_nhe">Quét tem QRcode được dán trên bao bì\nsản phẩm để nhận điểm tích lũy đổi quà nhé!</string>
    <string name="quet_tem_ngay">Quét tem ngay</string>
    <string name="s_diem_tich_luy">%s Điểm tích lũy</string>
    <string name="tiec_qua_ban_vua_bo_lo_mat_roi">Tiếc quá, bạn vừa bỏ lỡ mất rồi</string>
    <string name="xu_cua_ban_da_duoc_cong_vao_kho">Xu của bạn đã được cộng vào Kho</string>
    <string name="s_xu">%s Xu</string>
    <string name="quan_ly_xu">Quản lý Xu</string>
    <string name="nhan_qua">Nhận quà</string>
    <string name="xem_qua">Xem quà</string>
    <string name="xem_kho_qua">Xem kho quà</string>
    <string name="anh_chup_man_hinh">Anh chup man hinh</string>
    <string name="chia_se_qua_app">Chia sẻ qua app</string>
    <string name="ban_khong_thuoc_danh_sach_tham_gia_chuong_trinh">Bạn không thuộc danh sách\ntham gia chương trình</string>
    <string name="lien_he_voi_doanh_nghiep_de_biet_them_chi_tiet">Liên hệ với Doanh nghiệp để biết thêm chi tiết</string>
    <string name="ma_s_khong_hop_le">Mã %s không hợp lệ</string>
    <string name="ma_khong_hop_le">Mã không hợp lệ</string>
    <string name="ban_co_them_d_luot_quay">Bạn có thêm %d lượt quay</string>
    <string name="s_gio">%s giờ</string>
    <string name="s_phut">%s phút</string>
    <string name="s_giay">%s giây</string>
    <string name="s_ngay">% ngày</string>
    <string name="con_lai_s">Còn lại %s</string>
    <string name="con_lai_">Còn lại </string>
    <string name="con_lai__">Còn lại: </string>
    <string name="game_tu_nhan_hang">Game từ nhãn hàng</string>
    <string name="d_diem">%d Điểm</string>
    <string name="d_luot_quay">%d lượt quay</string>
    <string name="het_luot_quay">Hết lượt quay</string>
    <string name="xac_nhan_doi_qua">Xác nhận đổi quà</string>
    <string name="vui_long_nhap_ten">Vui lòng nhập tên</string>
    <string name="email_khong_dung_dinh_dang">Email không đúng định dạng</string>
    <string name="chon_tinh_thanh">Chọn Tỉnh thành</string>
    <string name="vui_long_nhap_dia_chi">Vui lòng nhập địa chỉ</string>
    <string name="huong_dan_doi_qua">Hướng dẫn đổi quà</string>
    <string name="ban_khong_du_diem_doi_qua">Bạn không đủ điểm đổi quà!</string>
    <string name="tich_diem_ngay">Tích điểm ngay</string>
    <string name="ban_khong_du_diem_roi">Bạn không đủ điểm rồi!</string>
    <string name="het_luot_su_dung">Hết lượt sử dụng</string>
    <string name="dung_ngay">Dùng ngay</string>
    <string name="danh_dau_da_dung">Đánh dấu đã dùng</string>
    <string name="chua_co_su_kien">Chưa có sự kiện</string>
    <string name="qua_xu_icheck">Quà Xu iCheck</string>
    <string name="qua_the_cao">Quà thẻ cào</string>
    <string name="qua_doi_tai_cua_hang">Quà đổi tại cửa hàng</string>
    <string name="qua_giao_tan_noi">Quà giao tận nơi</string>
    <string name="qua_voucher">Quà voucher</string>
    <string name="qua_tinh_than">Quà tinh thần</string>
    <string name="tinh_than">Tinh thần</string>
    <string name="cho_xac_nhan">Chờ xác nhận</string>
    <string name="cho_giao">Chờ giao</string>
    <string name="da_nhan_qua">Đã nhận quà</string>
    <string name="tu_choi">Từ chối</string>
    <string name="xu_icheck">Xu iCheck</string>
    <string name="the_cao_dien_thoai">Thẻ cào điện thoại</string>
    <string name="nhan_tai_cua_hang">Nhận tại cửa hàng</string>
    <string name="giao_tan_noi">Giao tận nơi</string>
    <string name="voucher">Voucher</string>
    <string name="nhap_ma_may_man_tich_diem_day_kho">Nhập mã may mắn, tích điểm đầy kho</string>
    <string name="ban_oi_nhap_ma_in_tren_san_pham_de_nhan_diem_tich_luy_doi_qua_nhe">Bạn ơi! Nhập mã in trên sản phẩm để\nnhận điểm tích lũy đổi quà nhé!</string>
    <string name="quet_qr_code_tich_diem_day_kho">Quét QR code, tích điểm đầy kho</string>
    <string name="ban_oi_quet_qr_code_tren_san_pham_de_nhan_diem_tich_luy_doi_qua_nhe">Bạn ơi! Quét QR code trên sản phẩm để\nnhận điểm tích lũy đổi quà nhé!</string>
    <string name="chon_qua_hay_doi_lien_tay">Chọn quà hay, đổi liền tay</string>
    <string name="su_dung_diem_tich_luy_de_doi_nhung_phan_qua_hap_dan_ban_nhe">Sử dụng điểm tích lũy để đổi những\nphần quà hấp dẫn bạn nhé!</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="wow_qua_ve_roi">Wow! Quà về rồi!</string>
    <string name="that_tuyet_voi_phan_qua_doi_diem_cua_ban_da_ve_tay_nhanh_nhu_chop_do">Thật tuyệt vời, phần quà đổi điểm của\nbạn đã về tay nhanh như chớp đó!</string>
    <string name="toi_da_hieu">Tôi đã hiểu</string>
    <string name="so_serial">Số serial:</string>
    <string name="ma_code">Mã code:</string>
    <string name="thoi_gian_nhan">Thời gian nhận</string>
    <string name="noi_dung">Nội dung:</string>
    <string name="thoi_gian_doi">Thời gian đổi:</string>
    <string name="ban_chua_co_lich_su_tich_diem">Bạn chưa có lịch sử tích điểm</string>
    <string name="ban_chua_co_lich_su_tieu_diem">Bạn chưa có lịch sử tiêu điểm</string>
    <string name="doi_qua_ngay">Đổi quà ngay</string>
    <string name="doi_qua">Đổi quà</string>
    <string name="ban_chua_co_lich_su">Bạn chưa có lịch sử</string>
    <string name="lich_su_diem">Lịch sử điểm</string>
    <string name="top_nguoi_trung_thuong">Top người trúng thưởng</string>
    <string name="percent">%d%%</string>
    <string name="tai_ngay_app_de_tham_gia_chuong_trinh">Tải ngay app để tham gia chương trình</string>
    <string name="chuc_muong_s_da_trung_s_khi_tham_gia_su_kien_s_cua_nha_tai_tro_s">Chúc mừng %s đã trúng \"%s\" khi tham gia sự kiện \"%s\" của nhà tài trợ \"%s\"</string>
    <string name="da_xay_ra_loi_vui_long_thu_lai_sau">Đã xảy ra lỗi vui lòng thử lại sau</string>
    <string name="tiec_qua_ban_khong_co_luot_quay_nao">Tiếc quá, bạn không có lượt quay nào!</string>
    <string name="quet_tem_de_nhan_them_luot_quay_va_co_co_hoi_trung_hang_ngan_giai_thuong_hap_dan_nao">Quét tem để nhận thêm lượt quay và có cơ hội\ntrúng hàng ngàn giải thưởng hấp dẫn nào!</string>
    <string name="quet_qr_code_nhan_co_hoi_tot">Quét QR code, nhận cơ hội tốt</string>
    <string name="ban_oi_quet_qr_code_tren_san_pham_de_tham_gia_minigame_co_thuong_nhe">Bạn ơi! Quét QR code trên sản phẩm để tham gia minigame có thưởng nhé!</string>
    <string name="khach_hang_than_thiet">Khách hàng thân thiết</string>
    <string name="ban_chua_co_lich_su_doi_qua">Bạn chưa có lịch sử đổi quà</string>
    <string name="tham_gia_tich_diem_de_doi_qua_to_nao">Tham gia tích điểm để đổi quà to nào!</string>
    <string name="de_nhan_qua_nay_ban_vui_long_nhap_so_dien_thoai_va_chon_nha_mang_de_nhan_the_cao">Để nhận quà này, bạn vui lòng nhập\nsố điện thoại và chọn nhà mạng để nhận thẻ cào.</string>
    <string name="lich_su_tich_diem">Lịch sử tích điểm</string>
    <string name="them_luot_quay_ngay">Thêm lượt quay ngay</string>
    <string name="huong_dan_doi_qua_tai_cua_hang">Hướng dẫn đổi quà tại cửa hàng</string>
    <string name="ban_dang_khong_co_game_nao">Bạn đang không có game nào!</string>
    <string name="thuong_xuyen_theo_doi_cac_chuong_trinh_de_tham_gia_game_trung_qua_hap_dan_nhe">Thường xuyên theo dõi các chương trình để tham gia game trúng quà hấp dẫn nhé</string>
    <string name="check_ma_tham_gia_ngay">Check mã tham gia game ngay</string>
</resources>