<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/size_40"
    android:paddingRight="@dimen/size_40">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_point_loyalty_empty" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessageTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/ban_chua_co_lich_su_doi_qua"
        android:textColor="#757575" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessageBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/tham_gia_tich_diem_de_doi_qua_to_nao"
        android:textColor="#757575" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/bg_gradient_button_orange_yellow"
        android:elevation="@dimen/size_2"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingTop="@dimen/size_10"
        android:paddingBottom="@dimen/size_10"
        android:singleLine="true"
        android:text="@string/tich_diem_ngay"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>