<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_22"
        android:layout_marginRight="@dimen/size_22"
        android:background="@drawable/bg_tutorial_loyalty"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_25"
            android:layout_marginTop="@dimen/size_25"
            android:layout_marginRight="@dimen/size_25"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/huong_dan_doi_qua_tai_cua_hang"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_22"
            android:layout_marginTop="@dimen/size_13"
            android:layout_marginRight="@dimen/size_22"
            android:background="@drawable/bg_border_dotted_10_gray"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="@dimen/size_8"
            android:paddingTop="@dimen/size_10"
            android:paddingRight="@dimen/size_8"
            android:paddingBottom="@dimen/size_10"
            android:text="@string/tutorial_loyalty"
            android:textColor="#434343" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_22"
            android:layout_marginTop="@dimen/size_15"
            android:layout_marginRight="@dimen/size_22"
            android:layout_marginBottom="@dimen/size_30"
            android:background="@drawable/bg_gradient_button_orange_yellow"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="@dimen/size_10"
            android:paddingBottom="@dimen/size_10"
            android:text="@string/toi_da_hieu"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        app:srcCompat="@drawable/ic_close_popup_32px" />
</LinearLayout>