<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pull_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="14dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_back_blue_24px" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/khach_hang_than_thiet"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_4"
            android:background="@drawable/shadow_bottom" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_list_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/item_campaign"
            tools:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/img_no_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_no_game"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_no_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/ban_dang_khong_co_game_nao"
            android:textAlignment="center"
            android:textColor="#212121"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_desc_no_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/thuong_xuyen_theo_doi_cac_chuong_trinh_de_tham_gia_game_trung_qua_hap_dan_nhe"
            android:textAlignment="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCheckCodeNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginTop="@dimen/size_20"
            android:layout_marginRight="@dimen/size_32"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/check_ma_tham_gia_ngay"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>