<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginRight="@dimen/size_24"
        android:background="@drawable/bg_white_corners_10"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_24"
            app:srcCompat="@drawable/ic_vqmm_het_luot" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_12"
            android:layout_marginTop="@dimen/size_45"
            android:layout_marginRight="@dimen/size_12"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/tiec_qua_ban_khong_co_luot_quay_nao"
            android:textColor="#000000"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10"
            android:layout_marginTop="@dimen/size_14"
            android:layout_marginRight="@dimen/size_10"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/quet_tem_de_nhan_them_luot_quay_va_co_co_hoi_trung_hang_ngan_giai_thuong_hap_dan_nao"
            android:textColor="#828282"
            android:textSize="14sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:layout_marginLeft="@dimen/size_14"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginRight="@dimen/size_14"
            android:layout_marginBottom="@dimen/size_14"
            android:background="@drawable/bg_corners_53_blue"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/them_luot_quay_ngay"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20"
        app:srcCompat="@drawable/ic_close_popup_32px" />
</LinearLayout>